# wcc-proj

./: README.md  pyproject.toml
config/: settings.py
