[tool.poetry]
name = "wcc-proj"
version = "0.1.0"
description = ""
authors = ["jaeupsu <hyeongs2323@gmail.com>"]
readme = "README.md"
packages = [{include = "wcc_proj"}]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.14.0"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
